<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="18dp">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:layout_marginTop="70dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/logins"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/judul"
            android:textColor="#000"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="292dp" />

        <EditText
            android:id="@+id/edName"
            android:layout_width="344dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/detail9"
            android:inputType="textPersonName"/>
        <EditText
            android:id="@+id/edEmail"
            android:layout_width="344dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint=" Email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="344dp"
            android:layout_height="48dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/detail8"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/btnGetStarted"
            android:layout_width="345dp"
            android:layout_height="52dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/yellow"
            android:textStyle="bold"
            android:text="@string/detail7"
            android:layout_gravity="center" />
    </LinearLayout>
</RelativeLayout>