<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar"
                app:layout_scrollFlags="scroll|enterAlways"
                app:titleTextColor="@color/white">
            <ImageButton
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_margin="@dimen/_12sdp"
                android:background="@drawable/btn_bg"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_exit"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            <TextView
                android:id="@+id/nametext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_bold"
                android:layout_marginTop="4dp"
                android:text="Halo"
                android:textColor="@color/darkbrown"
                android:textSize="@dimen/_20ssp" />
            </androidx.appcompat.widget.Toolbar>
            <View
                android:layout_width="380dp"
                android:layout_height="1dp"
                android:layout_marginLeft="12dp"
                android:background="@color/black" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_bold"
                android:padding="@dimen/_10sdp"
                android:text="@string/detail2"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_10sdp">


                <SearchView
                    android:id="@+id/search_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/search_bg"
                    android:iconifiedByDefault="false"
                    android:queryBackground="@color/transparent"
                    android:queryHint="@string/detail10"
                    android:theme="@style/ThemeOverlay.Search" />

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_main_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="horizontal"
                tools:itemCount="1"
                tools:listitem="@layout/item_rv_main_category" />

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_bold"
                android:paddingStart="@dimen/_10sdp"
                android:text="@string/detail3"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_sub_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="horizontal"
                tools:itemCount="1"
                tools:listitem="@layout/item_rv_sub_category" />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>